# flask-socketio-lit-html

./: .coveragerc  .gitignore  .gitpod.yml  .readthedocs.yml  .travis.yml  README.md  app.py  glitch.json  pip.requirements  pyproject.toml  requirements.txt  run_test_app.py  tox.ini
.github/workflows/: deploy.yml  test.yml
.theia/: settings.json
dependencies/: dependencies.js  package.json  rollup.config.js
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  web_component_base_js.rst  webcomponent_base.rst
flask_socketio_lit_html/: webcomponent_base.py
flask_socketio_lit_html/dependencies/: dependencies.js  package.json  rollup.config.js
flask_socketio_lit_html/static/: 404.html
flask_socketio_lit_html/webcomponent_templates/: webcomponent_base.js
flask_socketio_lit_html/webcomponents_static/: element.js
templates/: User.html  api.html  car.html  main.html  todo.html  user.html  user.js  users.html
tests/: package.json  test_app.py  webcomponent.test.js
tests/todo_app/: todoapp.py
tests/todo_app/templates/: todo.html  todoapp.html
webcomponent_templates/: webcomponent_base.js
