[tool.poetry]
name = "flask-socketio-lit-html"
version = "0.1.6"
description = "Simple Webcomponents with flask"
authors = ["playerla <playerla.94@gmail.com>"]
repository = "https://github.com/playerla/flask-socketio-lit-html"
documentation = "https://flask-socketio-lit-html.readthedocs.io"
readme = "README.md"
license = "MIT"
keywords = ["Webcomponents", "Flask", "lit-html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.7"
flask = "~1.1.1"
flask-sqlalchemy = "~2.4.0"
flask-socketio = "~4.2.1"
eventlet = { version = "~0.25.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
